kubernetes/argocd/apps/workloads/couchdb/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      containers:
        - name: couchdb
          image: couchdb:3.3.3
          ports:
            - containerPort: 5984
          volumeMounts:
            - name: couchdb-data
              mountPath: /opt/couchdb/data
            - name: couchdb-config
              mountPath: /opt/couchdb/etc/local.d/obsidian.ini
              subPath: local.ini
      volumes:
        - name: couchdb-data
          persistentVolumeClaim:
            claimName: couchdb-data
        - name: couchdb-config
          configMap:
            name: couchdb-config
