kubernetes/argocd/apps/workloads/couchdb/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - protocol: TCP
      port: 5984
      targetPort: 5984
